--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,114 +1,104 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-<head>
-  {% if btitle %}
-        <title>
-            {{ btitle }}
-        </title>
-  {% else %}
-        <title>Decode your body</title>
-  {% endif %}
-  {% block javscript %}{% endblock javscript %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'home/style.css' %}">
-</head>
-<body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Кафедра БЖСиГХ ИАиС ВолгГТУ</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg" style="background-color: #eceff1; color:#1976d2;">
+        <a class="navbar-brand" href="/">Кафедра БЖСиГХ</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'static-home' %}">KA</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="nav-item {% if request.resolver_match.url_name == 'static-home' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'static-home' %}">Home</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li class="nav-item {% if request.resolver_match.url_name == 'mydna' %}active{% endif %}"">
-            <a class="nav-link" href="{% url 'mydna' %} ">My DNA</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Favourite traits</a>
-          </li>
-          <li class="nav-item {% if request.resolver_match.url_name == 'constructor' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'constructor' %} ">Create a trait</a>
-          </li>
-          {% endif %}
-          <li class="nav-item {% if request.resolver_match.url_name == 'static-about' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'static-about' %}">About</a>
-          </li>
-          <li class="nav-item {% if request.resolver_match.url_name == 'static-latest' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'static-latest' %}">Latest traits</a>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-            <li class="nav-item {% if request.resolver_match.url_name == 'profile' %}active{% endif %}">
-              <a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/about/">О кафедре<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              <a class="nav-link" href="#">Наука</a>
             </li>
-          {% else %}
-            <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-              <a class="nav-link" href="{% url 'login' %}">Log in</a>
-            </li>
-            <li class="nav-item {% if request.resolver_match.url_name == 'register' %}active{% endif %}">
-              <a class="nav-link" href="{% url 'register' %}">Register</a>
-            </li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="container-fluid text-center">
-    <div class="row content">
-      <div class="col-sm-2 sidenav">
-        {% block side_bar %}{% endblock side_bar %}
-      </div>
-      <div class="col-sm-8 text-left">
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                {{ message }}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Люди
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Заведующий кафедрой</a>
+                <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Профессор Батманов</a>
+                  <a class="dropdown-item" href="#">Профессор Боровков</a>
+                  <a class="dropdown-item" href="#">Профессор Сидельникова</a>
+                  <a class="dropdown-item" href="#">Профессор Стрекалов</a>
+                  <a class="dropdown-item" href="#">Профессор Тертишников</a>
+                <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Доценты и преподаватели</a>
+                  <a class="dropdown-item" href="#">Аспиранты</a>
               </div>
-            {% endfor %}
-          {% endif %}
-          {% block page_content %}{% endblock page_content %}
-      </div>
-      <div class="col-sm-2 sidenav">
-        <div class="well">
-          <h3>I recommend:</h3>
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://refer.23andme.com/s/bygku">Order 23andme</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Order AncestryDNA</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Order familytreeDNA</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Genetic test outside of US</a>
+              <a class="nav-link disabled" href="#">Лаборатория</a>
             </li>
           </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Поиск google" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" style="color:#1976d2; border-color: #1976d2;" type="submit">Поиск</button>
+          </form>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <div class="container-fluid mt-2">
+        <div class="row">
+          <div class="col-lg-3 col-xl-2"> <!-- style="background-color: #1976d2;"-->
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+              aria-selected="true">История</a>
+              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+              aria-selected="false">Научные направления</a>
+              <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+              aria-selected="false">Подготовленные кадры</a>
+              <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+              aria-selected="false">Для студентов</a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-xl-7">
+            {% block page_content %}
+            {% endblock page_content %}
+            <h2>Кафедра "Безопасность жизнедеятельности в строительстве и городском хозяйстве" (БЖСиГХ)</h2>
+            <h4>Институт архитектуры и строительства ВолгГТУ</h4>
+            <p>В соответствии с решением Ученого совета университета от 27.03.2006 г. с июля 2006 г. организована кафедра «Безопасности жизнедеятельности в техносфере» (БЖДвТ).
+
+Заведующий кафедрой — Азаров В.Н. д.т.н., профессор, доктор технических наук, профессор, Заслуженный эколог РФ, Лауреат премии правительства РФ в области образования, советник РААСН.</p>
+            <h2>Основные научные направления кафедры</h2>
+
+          </div>
+          <div class="col-lg-3 col-xl-3 jumbotron">
+            Advertise
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <footer class="container-fluid text-center">
-    <p>Footer Text</p>
-  </footer>
-</body>
+    </main>
+
+    <footer>
+      <div class="jumbotron mt-2 justify-content-center">
+        2020 Сайт работает благодаря M.Sc. Mikhail Trunov mikhail.trunov@gmail.com
+      </div>
+    </footer>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
