--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Кафедра БЖСиГХ ИАиС ВолгГТУ</title>
+    <title>{{ post_title }}</title>
   </head>
   <body>
     <header>
@@ -20,6 +20,12 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+            {% for name, age in mainm.items %}
+                <li class="nav-item"><a class="nav-link" href="{{link}}">{{name}}</a></li>
+            {% endfor %}
+
+            {{ main_menu }}
+<!--
             <li class="nav-item active">
               <a class="nav-link" href="/about/">О кафедре<span class="sr-only">(current)</span></a>
             </li>
@@ -46,6 +52,7 @@
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Лаборатория</a>
             </li>
+-->
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Поиск google" aria-label="Search">
