--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -12,18 +12,20 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg" style="background-color: #eceff1; color:#1976d2;">
-        <a class="navbar-brand" href="/">Кафедра БЖСиГХ</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #eceff1; color:#1976d2;">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto">
+            <a class="navbar-brand" href="/">Кафедра БЖСиГХ</a>
             {% for name, link in mainm.items %}
                 <li class="nav-item"><a class="nav-link" href="{{link}}">{{name}}</a></li>
             {% endfor %}
-                <li class="nav-item"><a class="nav-link disabled" href="http://vstu.ru" target='_blank'>Сайт ВолгГТУ</a></li>
+
+
 
 <!--
             <li class="nav-item active">
@@ -63,9 +65,9 @@
     </header>
 
     <main>
-      <div class="container-fluid mt-2">{% if request.path == url %} class="active"{% endif %}
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-3 col-xl-2"> <!-- style="background-color: #1976d2;"-->
+          <div class="col-lg-3 col-xl-2 mt-2"> <!-- style="background-color: #1976d2;"-->
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               {% for name, link in leftm.items %}
                   <a class="nav-link {% if link == request.path %} active {% endif %}" id="v-pills-home-tab" href="{{link}}" role="tab" aria-controls="v-pills-home"
@@ -84,7 +86,7 @@
 -->
             </div>
           </div>
-          <div class="col-lg-6 col-xl-7">
+          <div class="col-lg-6 col-xl-7 mt-2">
             {{page_content|safe}}
 
 
@@ -97,18 +99,30 @@
             <h2>Основные научные направления кафедры</h2>
 -->
           </div>
-          <div class="col-lg-3 col-xl-3 jumbotron">
+          <div class="col-lg-3 col-xl-3 jumbotron mt-2">
             Advertise
           </div>
         </div>
       </div>
     </main>
 
-    <footer>
-      <div class="jumbotron mt-2 justify-content-center">
-        2020 Сайт работает благодаря M.Sc. Mikhail Trunov mikhail.trunov@gmail.com
+
+    <footer style="height: 300px; background-color: #eceff1; color:#1976d2;">
+      <div class="container-fluid pb-4 pt-4">
+        <div class="col-lg-8">
+          Разработка сайта: mikhail.trunov@gmail.com
+        </div>
+        <div class="row" style="height: 300px;">
+          <div class="col-lg-4 pt-4">
+            <a href="http://vstu.ru" target="_blank"><img src="http://vstu.ru/bitrix/templates/mfrog/images/logo.png" alt="ВолгГТУ" width="260"></a>
+          </div>
+          <div class="col-lg-4 pt-4">
+            <a href="https://www.minobrnauki.gov.ru/" target="_blank"><img class="mh-100" src="https://www.minobrnauki.gov.ru/common/upload/min-obr-header.png" alt="" class="logoimage"></a>
+          </div>
+        </div>
       </div>
     </footer>
+
 
 
     <!-- Optional JavaScript -->
