--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -113,12 +113,16 @@
           Разработка сайта: mikhail.trunov@gmail.com
         </div>
         <div class="row" style="height: 300px;">
-          <div class="col-lg-4 pt-4">
+          <div class="col-lg-3 pt-4">
             <a href="http://vstu.ru" target="_blank"><img src="http://vstu.ru/bitrix/templates/mfrog/images/logo.png" alt="ВолгГТУ" width="260"></a>
           </div>
-          <div class="col-lg-4 pt-4">
+          <div class="col-lg-3 pt-4">
+            <a href="http://vgasu.ru" target="_blank"><img src="http://vgasu.ru/images/title.png" width="380" height="85" alt="ИАиС ВолГТУ" title="Институт архитектуры и строительства ВолгГТУ"></a>
+<!--
             <a href="https://www.minobrnauki.gov.ru/" target="_blank"><img class="mh-100" src="https://www.minobrnauki.gov.ru/common/upload/min-obr-header.png" alt="" class="logoimage"></a>
+-->
           </div>
+          
         </div>
       </div>
     </footer>
